--- a/debian/changelog
+++ b/debian/changelog
@@ -1,5 +1,6 @@
-kano-draw (1.0-1) UNRELEASED; urgency=low
+kano-draw (1.0-1.1) UNRELEASED; urgency=low
 
   * Initial release. (Closes: #XXXXXX)
+  * Removing XP dialog, setting all levels always open 
 
- -- Alex <alex@Kano>  Wed, 16 Apr 2014 17:40:58 +0100
+ -- Alex <seec@seec>  Sun, 12 Jul 2015 01:55:28 -0500
